@@ -2,7 +2,7 @@ package Music::Cadence;
 
 # ABSTRACT: Generate musical cadence chords
 
-our $VERSION = '0.1309';
+our $VERSION = '0.1400';
 
 use Moo;
 use Music::Chord::Note;
@@ -174,6 +174,22 @@ has seven => (
     default => sub { 0 },
 );
 
+=head2 picardy
+
+If set, use the "Picardy third" for the final chord.
+
+This effectively raises the second note of the final chord by one
+half-step.
+
+Default: C<0>
+
+=cut
+
+has picardy => (
+    is      => 'ro',
+    default => sub { 0 },
+);
+
 =head1 METHODS
 
 =head2 new
@@ -181,11 +197,12 @@ has seven => (
   $mc = Music::Cadence->new;  # Use defaults
 
   $mc = Music::Cadence->new(  # Override defaults
-    key    => $key,
-    scale  => $scale,
-    octave => $octave,
-    format => $format,
-    seven  => $seven,
+    key     => $key,
+    scale   => $scale,
+    octave  => $octave,
+    format  => $format,
+    seven   => $seven,
+    picardy => $picardy,
   );
 
 Create a new C<Music::Cadence> object.
@@ -198,6 +215,7 @@ Create a new C<Music::Cadence> object.
     key       => $key,        # See above
     scale     => $scale,      # "
     octave    => $octave,     # "
+    picardy   => $picardy,    # "
     type      => $type,       # Default: perfect
     leading   => $leading,    # Default: 1
     variation => $variation,  # Default: 1
@@ -271,6 +289,7 @@ sub cadence {
     my $key       = $args{key} || $self->key;
     my $scale     = $args{scale} || $self->scale;
     my $octave    = $args{octave} // $self->octave;
+    my $picardy   = $args{picardy} || $self->picardy;
     my $type      = $args{type} || 'perfect';
     my $leading   = $args{leading} || 1;
     my $variation = $args{variation} || 1;
@@ -365,6 +384,27 @@ sub cadence {
     }
     else {
         die 'unknown cadence';
+    }
+
+    if ( $picardy ) {
+        my %halfstep = (
+            'C'  => 'C#',
+            'C#' => 'D',
+            'D'  => 'D#',
+            'D#' => 'E',
+            'E'  => 'F',
+            'E#' => 'F#',
+            'F'  => 'F#',
+            'F#' => 'G',
+            'G'  => 'G#',
+            'G#' => 'A',
+            'A'  => 'A#',
+            'A#' => 'B',
+            'B'  => 'C',
+            'B#' => 'C#',
+        );
+
+        $cadence->[1][1] = $halfstep{ $cadence->[1][1] };
     }
 
     return $cadence;
